change: added skill category deployment change: contact and project links are now opens in new tab change: added whatsapp link change: hidden scrollbar fix: scroll on resume page fix: scroll page design

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -30,13 +30,14 @@
         <div class="d-flex flex-column">
 			<div class="profile">
 				<img src="{% static 'img/profile-img.jpg' %}" alt="" class="img-fluid rounded-circle">
-				<h1 class="text-light"><a href="index.html">Качура Владислав</a></h1>
+				<h1 class="text-light"><a href="{% url 'main:about' %}">Качура Владислав</a></h1>
 				<div class="social-links mt-3 text-center">
-					<a href="https://github.com/BungaaFACE" class="github"><i class="fa-brands fa-github"></i></a>
-					<a href="https://hh.ru/resume/703e5766ff0d1b68230039ed1f4d73546e4d41" class="headhunter"><i class="fa-solid fa-heading"></i></a>
-					<a href="https://www.linkedin.com/in/bungaaface/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-					<a href="https://t.me/BungaaFACE" class="telegram"><i class="fa-brands fa-telegram"></i></a>
-					<a href="mailto:vladislav0218@gmail.com" class="email"><i class="fa-regular fa-envelope"></i></a>
+					<a href="https://github.com/BungaaFACE" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
+					<a href="https://hh.ru/resume/703e5766ff0d1b68230039ed1f4d73546e4d41" target="_blank" class="headhunter"><i class="fa-solid fa-heading"></i></a>
+					<a href="https://t.me/BungaaFACE" target="_blank" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+					<a href="https://wa.me/qr/FRIDGIOXAAB4N1" target="_blank" class="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
+					<a href="https://www.linkedin.com/in/bungaaface/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+					<a href="mailto:vladislav0218@gmail.com" target="_blank" class="email"><i class="fa-regular fa-envelope"></i></a>
 				</div>
 			</div>
     
