--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
     
-			<nav id="navbar" class="nav-menu navbar">
+			<nav class="nav-menu">
 				<ul>
 					{% with url_name=request.resolver_match.view_name %}
 					<li><a href="{% url 'main:main_page' %}" class="{% if url_name == 'main:main_page' %}active{% endif %}">
@@ -54,13 +54,13 @@
 						<i class="fa-solid fa-file"></i> <span>Резюме</span></a>
 					</li>
 					<li><a href="{% url 'main:skills' %}" class="{% if url_name == 'main:skills' %}active{% endif %}">
-						<i class="fa-solid fa-cubes-stacked"></i> <span>Скиллы</span></a>
+						<i class="fa-solid fa-bars-progress"></i> <span>Скиллы</span></a>
 					</li>
-					<li><a href="#portfolio" class="{% if url_name == '#portfolio' %}active{% endif %}">
-						<i class="bx bx-server"></i> <span>Проекты</span></a>
+					<li><a href="{% url 'main:projects' %}" class="{% if url_name == 'main:projects' %}active{% endif %}">
+						<i class="fa-solid fa-cubes-stacked"></i> <span>Проекты</span></a>
 					</li>
 					<li><a href="#contact" class="{% if url_name == '#contact' %}active{% endif %}">
-						<i class="bx bx-envelope"></i> <span>Контакты</span></a>
+						<i class="fa-solid fa-address-book"></i> <span>Контакты</span></a>
 					</li>
 					{% endwith %}
 				</ul>
@@ -77,5 +77,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
 	crossorigin="anonymous"></script>
+	<footer id="footer">
+		<nav class="nav-bar">
+			{% with url_name=request.resolver_match.view_name %}
+			<a href="{% url 'main:main_page' %}" class="{% if url_name == 'main:main_page' %}active{% endif %}">
+				<i class="fa-solid fa-house"></i> <span>Главная</span></a>
+			<a href="{% url 'main:about' %}" class="{% if url_name == 'main:about' %}active{% endif %}">
+				<i class="fa-solid fa-user"></i>  <span>Обо мне</span></a>
+			<a href="{% url 'main:resume' %}" class="{% if url_name == 'main:resume' %}active{% endif %}">
+				<i class="fa-solid fa-file"></i> <span>Резюме</span></a>
+			<a href="{% url 'main:skills' %}" class="{% if url_name == 'main:skills' %}active{% endif %}">
+				<i class="fa-solid fa-bars-progress"></i> <span>Скиллы</span></a>
+			<a href="{% url 'main:projects' %}" class="{% if url_name == 'main:projects' %}active{% endif %}">
+				<i class="fa-solid fa-cubes-stacked"></i> <span>Проекты</span></a>
+			<a href="#contact" class="{% if url_name == '#contact' %}active{% endif %}">
+				<i class="fa-solid fa-address-book"></i> <span>Контакты</span></a>
+			{% endwith %}
+		</nav>
+	</footer>
 </body>
 </html>
