--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,18 +21,16 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 300px;
 }
 
-@media (max-width: 1199px) {
-    #header {
-        left: -300px;
-    }
-
-    .main {
-        margin-left: 0;
-    }
-}
-
 ::-webkit-scrollbar { 
     display: none; 
+}
+
+.rotate-m-ninety {
+    transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg); /* IE 9 */
+    -moz-transform: rotate(-90deg); /* Firefox */
+    -webkit-transform: rotate(-90deg); /* Safari and Chrome */
+    -o-transform: rotate(-90deg); /* Opera */
 }
 
 /*--------------------------------------------------------------
@@ -141,13 +139,96 @@ section {
     margin-left: 300px;
 }
 
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: -50px;
+    height: 50px;
+    width: 100vw;
+    transition: all ease-in-out 0.5s;
+    z-index: 9996;
+    transition: all 0.5s;
+    padding: 0 15px;
+    background: #040b14;
+    overflow-x: auto;
+}
+.nav-bar {
+    text-align:center;
+}
+
+.nav-bar a {
+    padding: 11px 7px;
+    list-style: none;
+    margin: 0 auto;
+}
+
+.nav-bar span {
+    margin: 0;
+    padding: 0;
+}
+
+
+.nav-bar a,
+.nav-bar a:focus {
+    display: inline-block;
+    align-items: center;
+    color: #a8a9b4;
+    /* padding: 12px 15px; */
+    /* margin-bottom: 8px; */
+    transition: 0.3s;
+    font-size: 15px;
+}
+
+.nav-bar a i,
+.nav-bar a:focus i {
+    font-size: 24px;
+    /* padding-right: 8px; */
+    color: #6f7180;
+}
+
+.nav-bar a:hover,
+.nav-bar .active,
+.nav-bar .active:focus {
+    text-decoration: none;
+    color: #fff;
+}
+/* .nav-bar li:hover>a */
+
+.nav-bar a:hover i,
+.nav-bar .active i,
+.nav-bar .active:focus i,
+.nav-bar li:hover>a i {
+    color: #149ddd;
+}
+
+@media (max-width: 658px) {
+    #footer span{
+        display: none;
+    }
+    /* .nav-bar a {
+        margin: auto;
+        padding: 11px 7px 11px 7px;
+        list-style: none;
+    } */
+}
+
+/*--------------------------------------------------------------
+# Header and Footer width
+--------------------------------------------------------------*/
 @media (max-width: 1199px) {
     #header {
-		left: -300px;
+        left: -300px;
     }
 
-    #main {
-		margin-left: 0;
+    .main {
+        margin-left: 0;
+    }
+
+    #footer {
+        bottom: 0;
     }
 }
 
