--- a/main/templates/main/project_tags.html
+++ b/main/templates/main/project_tags.html
@@ -11,17 +11,24 @@
         <div class="section-title">
 			<h2>Проекты</h2>
             <p class="col-lg-8">
-                Создано множество проектов, которые подразделены по основным тегам. При нажатии на тег откроется список проектов, соответсвующих этому тегу. &#x293B; 
+                Создано множество проектов, которые подразделены по основным тегам. 
+                При нажатии на тег откроется список проектов, соответсвующих этому тегу. 
             </p>
 		</div>
 
         <div class="row">
             
             {% for tag in tags %}
-            <div class="info-card {{ tag.pk }} row">
+            <div class="info-card row">
                 <h4 style="cursor: pointer;" onclick="tag_click(this);"> 
-                    <div class="rotate-m-ninety" style="display: inline-block; transition-duration: 0.6s;">&#x2939;</div> <u>{{ tag.name }}</u>
+                    <div class="rotate-m-ninety" style="display: inline-block; transition-duration: 0.6s;">&#x2939;</div> 
+                    <u>{{ tag.name }}</u>
                 </h4>
+                <div class="projects-list">
+                    {% for project in tag.project_set.all %}
+                    <a href="{% url 'main:project_detail' project.slug %}"><h5>{{ project.name }}</h5></a>
+                    {% endfor %}
+                </div>
             </div>
             {% endfor %}
 
@@ -33,12 +40,14 @@
 <script>
     function tag_click(tag_element) {
         arrow_element = $(tag_element).children("div").eq(0);
+        projects_element = $(tag_element).next();
         console.log(arrow_element)
         if(arrow_element.hasClass("rotate-m-ninety")) {
             arrow_element.removeClass("rotate-m-ninety");
         } else {
             arrow_element.addClass("rotate-m-ninety");
         };
+        projects_element.slideToggle("slow");
             
     }
 </script>
