--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
+	<link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}" >
+
     <!-- bootstrap -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
