change: link to project is not opens new tab

--- a/main/templates/main/project_detail.html
+++ b/main/templates/main/project_detail.html
@@ -23,7 +23,7 @@
         {% if object.demo %}
             <h5 style="white-space: pre-line"><b>DEMO:</b> {{ object.demo }}</h5>
         {% endif %}
-        <h5 style="white-space: pre-line"><b>Source code:</b> {{ object.link }}</h5>
+        <h5 style="white-space: pre-line"><b>Source code:</b> <a href="{{ object.link }}"  target="_blank">{{ object.link }}</a></h5>
 
 
 	</div>
